Remove Raw16 from ConvertPixelFormat, not supported by Vimba

--- a/vimbaApp/Db/vimba.template
+++ b/vimbaApp/Db/vimba.template
@@ -55,11 +55,9 @@ record(mbbo, "$(P)$(R)ConvertPixelFormat") {
   field(TWVL, "2")
   field(TWST, "Mono16")
   field(THVL, "3")
-  field(THST, "Raw16")
+  field(THST, "RGB8")
   field(FRVL, "4")
-  field(FRST, "RGB8")
-  field(FVVL, "5")
-  field(FVST, "RGB16")
+  field(FRST, "RGB16")
   field(OUT,  "@asyn($(PORT) 0)VMB_CONVERT_PIXEL_FORMAT")
 }
 
@@ -73,11 +71,9 @@ record(mbbi, "$(P)$(R)ConvertPixelFormat_RBV") {
   field(TWVL, "2")
   field(TWST, "Mono16")
   field(THVL, "3")
-  field(THST, "Raw16")
+  field(THST, "RGB8")
   field(FRVL, "4")
-  field(FRST, "RGB8")
-  field(FVVL, "5")
-  field(FVST, "RGB16")
+  field(FRST, "RGB16")
   field(INP,  "@asyn($(PORT) 0)VMB_CONVERT_PIXEL_FORMAT")
 }
 
