Install USB TL files

--- a/vimbaSupportC/Makefile
+++ b/vimbaSupportC/Makefile
@@ -15,24 +15,32 @@ LIB_INSTALLS    += ../os/windows-x64/VimbaC.lib
 LIB_INSTALLS    += ../os/windows-x64/VimbaImageTransform.lib
 BIN_INSTALLS    += ../os/windows-x64/VimbaGigETL.cti
 BIN_INSTALLS    += ../os/windows-x64/VimbaGigETL.xml
+BIN_INSTALLS    += ../os/windows-x64/VimbaUSBTL.cti
+BIN_INSTALLS    += ../os/windows-x64/VimbaUSBTL.xml
 
 else ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
 LIB_INSTALLS    += ../os/win32-x86/VimbaC.lib
 LIB_INSTALLS    += ../os/win32-x86/VimbaImageTransform.lib
 BIN_INSTALLS    += ../os/win32-x86/VimbaGigETL.cti
 BIN_INSTALLS    += ../os/win32-x86/VimbaGigETL.xml
+BIN_INSTALLS    += ../os/win32-x86/VimbaUSBTL.cti
+BIN_INSTALLS    += ../os/win32-x86/VimbaUSBTL.xml
 
 else ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
 LIB_INSTALLS    += ../os/linux-x86_64/libVimbaC.so
 LIB_INSTALLS    += ../os/linux-x86_64/libVimbaImageTransform.so
 BIN_INSTALLS    += ../os/linux-x86_64/VimbaGigETL.cti
 BIN_INSTALLS    += ../os/linux-x86_64/VimbaGigETL.xml
+BIN_INSTALLS    += ../os/linux-x86_64/VimbaUSBTL.cti
+BIN_INSTALLS    += ../os/linux-x86_64/VimbaUSBTL.xml
 
 else ifeq (linux-x86, $(findstring linux-x86, $(T_A)))
 LIB_INSTALLS    += ../os/linux-x86/libVimbaC.so
 LIB_INSTALLS    += ../os/linux-x86/libVimbaImageTransform.so
 BIN_INSTALLS    += ../os/linux-x86/VimbaGigETL.cti
 BIN_INSTALLS    += ../os/linux-x86/VimbaGigETL.xml
+BIN_INSTALLS    += ../os/linux-x86/VimbaUSBTL.cti
+BIN_INSTALLS    += ../os/linux-x86/VimbaUSBTL.xml
 
 endif
 
